--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -21,7 +21,7 @@ jobs:
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.raptor7197 }}
+          github_user_name: raptor7197
           outputs: dist/snake.svg?palette=github-dark
 
 
